Added position tracker
ATTN: No semaphorelock used. Don't know if needed.

--- a/elevator_simulator.ini
+++ b/elevator_simulator.ini
@@ -13,9 +13,9 @@ SIGNAL void simulateCarMotor(void) {
     // set the pulse sensor
     if (currentPos - (float)(int)currentPos < 0.25 ||
         currentPos - (float)(int)currentPos >= 0.75)
-      PORTC |= 1 << 9;
+      PORTC |= 1 << 9;   // set GPIO_9 (pos sensor to 1)
     else
-      PORTC &= ~(1 << 9);
+      PORTC &= ~(1 << 9); // set GPIO_9 (pos sensor to 0)
 
     // set the floor sensor
     if (currentPos <= 0.5 ||
