Fixed comments in ini-files

--- a/testcase1.ini
+++ b/testcase1.ini
@@ -13,7 +13,7 @@ SIGNAL void testCase1() {
   // close the doors
   PORTC |= 1 << 8;
 
-  // let's go to floor 2
+  // lets go to floor 2
   printf("going to floor 2\n");
   PORTC |= 1 << 1;
 
@@ -28,7 +28,7 @@ SIGNAL void testCase1() {
     swatch(0.0025);
   }
 
-  // now it's 2s later, do the calls to floor 1 and 3
+  // now its 2s later, do the calls to floor 1 and 3
   printf("calling to floor 1 and 3\n");
   PORTC ^= 1 << 1;
   PORTC |= 1 << 0;
