Commented ini-code

--- a/testcase1.ini
+++ b/testcase1.ini
@@ -86,8 +86,9 @@ SIGNAL void testCase1() {
       swatch(0.0025);
     }
 
-    if (at_floor)
-      PORTC ^= 1 << 8;
+    if (at_floor) {
+      PORTC ^= 1 << 8; // Open the doors
+    }
   }
 
   if (!reached1) {
