--- a/testcase1.ini
+++ b/testcase1.ini
@@ -73,8 +73,9 @@ SIGNAL void testCase1() {
     }
 
     // if we have stopped at a floor, we open the doors for 1s
-    if (at_floor)
+    if (at_floor) {
       PORTC ^= 1 << 8;
+    } 
 
     // wait 1s
     for (i = 0; i < 400; ++i) {
@@ -87,7 +88,7 @@ SIGNAL void testCase1() {
     }
 
     if (at_floor) {
-      PORTC ^= 1 << 8; // Open the doors
+      PORTC ^= 1 << 8; // Toogle the doors
     }
   }
 
