Commented testCase2.ini

--- a/testCase2.ini
+++ b/testCase2.ini
@@ -10,14 +10,12 @@ SIGNAL void testCase2() {
   pos = 0;
   order = 0;
 
-  // close the doors
-  PORTC |= 1 << 8;
+  
+  PORTC |= 1 << 8;  // close the doors
 
-  // lets go to floor 3
   printf("going to floor 3\n");
-  PORTC |= 1 << 2;
-
-  
+  PORTC |= 1 << 2;      // set floor 3
+  // Wait 0.5 s 
   for (i = 0; i < 200; ++i) {
     if (lastPulsePinValue < (PORTC & (1 << 9))) {
       if (TIM3_CCR1) pos += 1;
@@ -26,12 +24,10 @@ SIGNAL void testCase2() {
     lastPulsePinValue = PORTC & (1 << 9);
     swatch(0.0025);
   }
+  PORTC &= ~(1 << 2); // unset floor 3 button
 
-  // reset pin 2 
-  PORTC &= ~(1 << 2);
-
-  while(pos < 390) {
-    // counting position 
+  // Wait till we get to position 390
+  while(pos < 390) {              
     if (lastPulsePinValue < (PORTC & (1 << 9))) {
       if (TIM3_CCR1) pos += 1;
       if (TIM3_CCR2) pos -= 1;
@@ -39,8 +35,8 @@ SIGNAL void testCase2() {
     lastPulsePinValue = PORTC & (1 << 9);
     swatch(0.0025);
   }
-  
-  PORTC |= 1 << 1;
+  PORTC |= 1 << 1;      // Set floor 2 button
+  // Wait 0.5 s 
   for (i = 0; i < 200; ++i) {
     if (lastPulsePinValue < (PORTC & (1 << 9))) {
       if (TIM3_CCR1) pos += 1;
@@ -49,8 +45,9 @@ SIGNAL void testCase2() {
     lastPulsePinValue = PORTC & (1 << 9);
     swatch(0.0025);
   }
-  PORTC &= ~(1 << 1);
+  PORTC &= ~(1 << 1);     // Unset floor 2 button 
 
+  // Wait til floor 2 and floor 3 reached
   while(!reached2 || !reached3) {
     at_floor = 0;
     // every second, check whether we are at a floor
@@ -87,14 +84,17 @@ SIGNAL void testCase2() {
     if (at_floor) {
       PORTC ^= 1 << 8; // Open the doors
     }
-  } 
-   if (!reached2) {
+  }
+
+  // Check if 2 reached 
+  if (!reached2) {
     while (1) {
       printf("Test-case failed: did not get to floor 2!\n");
       swatch(0.02);
     }
   }
 
+  // Check if 2 reached 
   if (!reached3) {
     while (1) {
       printf("Test-case failed: did not get to floor 3!\n");
@@ -102,18 +102,14 @@ SIGNAL void testCase2() {
     }
   }
 
-  if(!order){
-      while(1){
-          printf("Test-case failed: did not follow order floor3 first and then floor2! \n");
-
-      }
-
+  if(!order) {
+    while(1){
+        printf("Test-case failed: did not follow order floor3 first and then floor2! \n");
+    }
   }
 
   while (1) {
     printf("Test-case succeeded\n");
     swatch(0.02);
   }
-
-
 }
