Removed unused variable j

--- a/testCase2.ini
+++ b/testCase2.ini
@@ -1,6 +1,6 @@
 SIGNAL void testCase2() {
   int pos;
-  int i, j;
+  int i;
   int lastPulsePinValue;
   int reached2, reached3, order;
   int at_floor;
