prints less often from ini file

--- a/elevator_simulator.ini
+++ b/elevator_simulator.ini
@@ -1,15 +1,19 @@
 SIGNAL void simulateCarMotor(void) {
   float currentPos;
+  int count;
   currentPos = 0.0;
+
+  count = 0;
 
   while (1) {
     if (TIM3_ARR > 0) {
       currentPos += ((float)TIM3_CCR1 / (float)TIM3_ARR) * 0.125;
       currentPos -= ((float)TIM3_CCR2 / (float)TIM3_ARR) * 0.125;
     }
-
-    printf("%f\n", currentPos);
-    
+    count++;
+    if(count % 10 == 0){
+      printf("%f\n", currentPos);
+    }
     // set the pulse sensor
     if (currentPos - (float)(int)currentPos < 0.25 ||
         currentPos - (float)(int)currentPos >= 0.75)
