--- a/testCase2.ini
+++ b/testCase2.ini
@@ -21,6 +21,7 @@ SIGNAL void testCase2() {
       if (TIM3_CCR1) pos += 1;
       if (TIM3_CCR2) pos -= 1;
     }
+    printf("pos : %d \n ",pos);
     lastPulsePinValue = PORTC & (1 << 9);
     swatch(0.0025);
   }
@@ -32,6 +33,7 @@ SIGNAL void testCase2() {
       if (TIM3_CCR1) pos += 1;
       if (TIM3_CCR2) pos -= 1;
     }
+    printf("pos : %d \n ",pos);
     lastPulsePinValue = PORTC & (1 << 9);
     swatch(0.0025);
   }
@@ -78,6 +80,7 @@ SIGNAL void testCase2() {
         if (TIM3_CCR1) pos += 1;
         if (TIM3_CCR2) pos -= 1;
       }
+      printf("pos : %d \n ",pos);
       lastPulsePinValue = PORTC & (1 << 9);
       swatch(0.0025);
     }
