bug1 - possible fix

--- a/randomTest.ini
+++ b/randomTest.ini
@@ -81,7 +81,11 @@ SIGNAL void randomTest() {
     }
     // set the pin value 
     if (0 <= call && call <= 3) {
-      PORTC |= 1 << call; 
+      if(call == 3 && at_floor == 1){
+        printf("Cannot be stopped! \n");
+      } else {
+        PORTC |= 1 << call;
+      }  
       // wait 1s before resetting the pin value and creating the next pseudo random number
       for (i = 0; i < 400; ++i) {
         if (lastPulsePinValue < (PORTC & (1 << 9))) {
@@ -92,7 +96,7 @@ SIGNAL void randomTest() {
         swatch(time_step);
       }
       PORTC &= ~(1 << call); // reset the pin value
-    } else {    //maintains 1 second period before creating the next pseudo random number
+    } else {    //maintains 1 second period before creating a possible event
         for (i = 0; i < 400; ++i) {
         if (lastPulsePinValue < (PORTC & (1 << 9))) {
           if (TIM3_CCR1) pos += 1;
