--- a/randomTest.ini
+++ b/randomTest.ini
@@ -81,7 +81,7 @@ SIGNAL void randomTest() {
     }
     // set the pin value 
     if (0 <= call && call <= 3) {
-      if(call == 3 && at_floor == 1){
+      if(call == 3 && (PORTC & (1 << 7)) ){
         printf("Cannot be stopped! \n");
       } else {
         PORTC |= 1 << call;
